Bug 1890888 - Fix a crash where mCrossShadowBoundaryRange is not clear when the shadow host is removed r=smaug

If the end point is at a shadow root, and the corresponding host node is
removed from DOM, we should clear this mCrossShadowBoundaryRange for it.

Differential Revision: https://phabricator.services.mozilla.com/D207280